--- a/Ej1/index.html
+++ b/Ej1/index.html
@@ -18,3 +18,5 @@
     <button id="changeBackground">Cambiar fondo!</button>
   </body>
 </html>
+
+//Deberás modificar el código que se encuentra en el archivo *js/script.js* para que al dar click, en el botón *"Cambiar fondo!"* cambie el fondo al párrafo de id *"lorem"*.
